forth/test/fail/test_const_fold_redundant_bit_mask_get.af
use' ../../lang.af
fun: test_const_fold_redundant_bit_mask_get { val -- out }
  val -1 .bit_mask_get
end
